# open-beagle-fast-gp

./: LICENSE  README.md
src/: CMakeLists.txt  DataSetBinaryClassification.cpp  DataSetBinaryClassification.hpp  EphemeralPercent.cpp  EphemeralPercent.hpp  EqualTo.cpp  EqualTo.hpp  FitnessMCC.cpp  FitnessMCC.hpp  GPMain.cpp  HOFSharedLibCompileOp.cpp  HOFSharedLibCompileOp.hpp  IfThenElse.cpp  IfThenElse.hpp  LessThan.cpp  LessThan.hpp  SharedLibCompileOp.cpp  SharedLibCompileOp.hpp  SharedLibCompiler.cpp  SharedLibCompiler.hpp  SharedLibEvalOp.cpp  SharedLibEvalOp.hpp  StatsCalcFitnessMCCOp.cpp  StatsCalcFitnessMCCOp.hpp  TokenDeparserT.hpp  TrainingSetSamplingOp.cpp  TrainingSetSamplingOp.hpp
